[package]
name = "minecraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable high optimizations for our code, but not for dependencies (incl. Bevy):
[profile.release]
lto = "thin"
# debug = true

[dependencies]
bevy = { version = "0.10.0", features = ["dynamic_linking"] }
# bevy = "0.10.0"
bevy_flycam = { git = "https://github.com/NiklasEi/bevy_flycam/", branch = "bevy_main" }
noise = "0.8.2" # For generating terrain
rand = "0.8.4"
rayon = "1.5.1" # For generating terrain
# block-mesh = "0.2.0" # For generating terrain mesh